--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+  	"start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
   "dependencies": {
-    "express": "^4.13.0"
+    "edit-google-spreadsheet": "^0.2.19",
+    "express": "^4.13.0",
+    "nodemon": "^1.3.7"
   }
 }
