--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
   "dependencies": {
-    "express": "^4.13.0"
+    "express": "^4.13.0",
+    "forever": "^0.14.1"
   }
 }
