--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "body-parser": "^1.13.1",
     "edit-google-spreadsheet": "^0.2.19",
     "express": "^4.13.0",
     "forever": "^0.14.1",
